app/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-ui
  labels:
    app: note-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note-ui
  template:
    metadata:
      labels:
        app: note-ui
    spec:
      containers:
        - name: note-ui
          image: docker.io/pratama84/note_ui:latest  # ganti username Docker Hub lu
          ports:
            - containerPort: 4173
