app/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: note_api
spec:
  selector:
    app: note_api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
