app/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306
  clusterIP: None  # Headless service untuk StatefulSet
  selector:
    app: mysql
