app/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: note-ui
spec:
  selector:
    app: note-ui
  ports:
    - port: 80
      targetPort: 4173
  type: ClusterIP
