app/route-backend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: note-api
spec:
  to:
    kind: Service
    name: note-api
  port:
    targetPort: 3000
