app/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: note-ui
spec:
  to:
    kind: Service
    name: note-ui
  port:
    targetPort: 4173
